--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.95.3",
     "next": "^14.0.0",
     "next-intl": "^3.0.0",
     "react": "^18.2.0",
