--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.7.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.95.3",
     "next": "^14.0.0",
     "next-intl": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stripe": "^20.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
